--- a/codeup.vcxproj
+++ b/codeup.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1096.cpp" />
+    <ClCompile Include="1097.cpp" />
     <ClCompile Include="codeup.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
