--- a/codeup.vcxproj.filters
+++ b/codeup.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="codeup.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="1096.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="1097.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
